force-app/main/default/objects/ampi__Modification__c/ampi__Modification__c.object-meta.xml
<CustomObject>
    <description>Track modifications to a particular project (e.g. grant or program extensions).</description>
    <label>Modification</label>
    <nameField>
        <label>Modification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>