force-app/main/default/objects/ampi__Modification__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to track which particular Project an individual Modification pertains to.</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Modifications</relationshipLabel>
    <relationshipName>Modification</relationshipName>
    <type>Lookup</type>
</CustomField>