force-app/main/default/objects/ampi__Modification__c/fields/ampi__Proposed_New_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Proposed_New_End_Date__c</fullName>
    <description>When a Modification is a no-cost extension or a costed extension, this date field allows the requester to propose a new end date for the project.</description>
    <label>Proposed New End Date</label>
    <type>Date</type>
</CustomField>