force-app/main/default/objects/ampi__Modification__c/fields/ampi__Rationale__c.field-meta.xml
<CustomField>
    <fullName>ampi__Rationale__c</fullName>
    <description>Rich Text Area to capture the rationale or reasoning behind a particular request for a project modification.</description>
    <label>Rationale</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>