force-app/main/default/objects/ampi__Modification__c/fields/ampi__Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reviewer_Comments__c</fullName>
    <description>Rich text area to capture any notes by the reviewer to explain why they may approve or reject a modification request.</description>
    <label>Reviewer Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>