force-app/main/default/objects/ampi__Modification__c/fields/ampi__Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__Status__c</fullName>
    <description>Picklist field to track the progress and status of a Modification request.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>