force-app/main/default/objects/ampi__Modification__c/fields/ampi__Summary_Of_Modification__c.field-meta.xml
<CustomField>
    <fullName>ampi__Summary_Of_Modification__c</fullName>
    <description>Rich text area to provide further details on what the modification request entails.</description>
    <label>Summary of Modification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>