force-app/main/default/objects/ampi__Modification__c/fields/ampi__Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Type__c</fullName>
    <description>Picklist to define the type of modification. Picklist values for this field can be modified to reflect the types of modifications an organization wishes to support.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No-Cost Extension</fullName>
            </value>
            <value>
                <fullName>Costed Extension</fullName>
            </value>
            <value>
                <fullName>Reallocation of Funds</fullName>
            </value>
            <value>
                <fullName>Revision of Indicators</fullName>
            </value>
            <value>
                <fullName>Revision of Targets</fullName>
            </value>
            <value>
                <fullName>Other Modification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>